fixing some styles for back form wrapper on mobile

--- a/app/assets/stylesheets/catarse_bootstrap/_main.sass
+++ b/app/assets/stylesheets/catarse_bootstrap/_main.sass
@@ -1566,7 +1566,7 @@ button
   .back-reward-content
     .back-payment-formwrapper
       margin-bottom: 0px
-      padding: 0 10px
+      padding: inherit 10px
       border-bottom-style: none
       border-bottom-width: 0px
 
